# tempo-budget

./: .env.example  .gitignore  Cargo.toml  README.md  budget-perso-julie  budget-perso-julien  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  output
backend/: .dockerignore  .env  Cargo.toml  budget.db  requirements.txt  schema.sql
backend/app/: __init__.py  auth.py  database.py  main.py
backend/app/models/: __init__.py  budget.py  budget_member.py  category.py  invitation.py  transaction.py  user.py
backend/app/routes/: __init__.py  auth.py  budget_members.py  budgets.py  categories.py  invitations.py  transactions.py
backend/src/: auth.rs  main.rs  openapi.rs
backend/src/handlers/: auth.rs  budget_members.rs  budgets.rs  categories.rs  invitations.rs  mod.rs  transactions.rs
backend/src/models/: budget.rs  budget_member.rs  category.rs  invitation.rs  mod.rs  transaction.rs  user.rs
backend/src/routes/: mod.rs
frontend/: .dockerignore  Dockerfile  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  typedoc.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: AddTransactionForm.stories.ts  AddTransactionForm.vue  Layout.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: auth.ts  budget.ts
frontend/src/views/: AddTransactionView.vue  BudgetDetailView.vue  ChartsView.vue  DashboardView.vue  HistoryView.vue  LoginContent.vue  (+3 more)
scripts/: update_category_amounts.py
(+11 files in other folders)
